
light_classification_ct directory: Moved Calvenn's code and data here.
tl_cnn.py: Changed file paths to point to the new locations of the data.  
Moved frame-skipping logic from here to tl_classifier.py.
tl_classifier.py: Moved Calvenn's code, formerly in tl_detector.py,
to here.  Moved frame-skipping logic to here.

waypoint_updater.py: Undid Calvenn's change, since the max_tl_distance
logic in tl_detector.py handles this now.

Changes (2017-09-29 by cs4nd13)

Merged in latest changes from the Udacity upstream repository.  
The main changes affecting us:

Various unit-conversion bugs in waypoint_loader.py have been fixed.
The units are a bit confusing, because the launch file gives the
desired velocity in km per hour, the simulator displays velocity in 
miles per hour, and internally the code uses meters per second.

requirements.txt has been updated to require version 1.0.0 of
tensorflow.  (Udacity's change actually has a typo, so I have
incorporated a fix from a pull request that Udacity hasn't yet
acted on).

Changes (2017-09-29 by cs4nd13)

Publish distance to next light, even if not red

tl_detector.py: Modified value published in topic /traffic_waypoint.
If wp (the published value) is > 0, then wp is the waypoint of the
next red light.  If wp < 0, then abs(wp) is the waypoint of the next
light, but the next light is not red (or its state is unknown).

waypoint_updater.py: Modified value published in topic /tl_distance.
If tld (the published value) is > 0, then tld is the distance in
meters to the next light, and the next light is red.  If tld < 0,
then abs(tld) is the distance to the next light, and the next
light is not red (or its state is unknown).

Changes (2017-10-01 by cs4nd13)

Merged in Christian's changes:
This classifier is activated when traffic_light_algorithm is set to 2.
More details of this classifier can be found in the repo:
https://github.com/neocsr/traffic-light-detection

Created ros/launch/styx_csr.launch to launch using this algorithm.